first operator works

--- a/jquery-calculator-starter.html
+++ b/jquery-calculator-starter.html
@@ -85,6 +85,8 @@ $(document).ready(function(){
 
 
     var firstNumber="";
+    var operator ="";
+
 
     $("#button-1").on ("click", function() {
         firstNumber = firstNumber + $("#button-1").text();
@@ -140,34 +142,34 @@ $(document).ready(function(){
 
     //set Operators 
 
-    $("#button-0").on ("click", function() {
-        firstNumber = firstNumber + $("#button-0").text();
-        var printResult = $("#first-number");
-        printResult.text(firstNumber);
+    $("#button-plus").on ("click", function() {
+        operator = $("#button-plus").text();
+        var printOperator= $("#operator");
+        printOperator.text(operator);
     })
 
-    $("#button-0").on ("click", function() {
-        firstNumber = firstNumber + $("#button-0").text();
-        var printResult = $("#first-number");
-        printResult.text(firstNumber);
+    $("#button-plus").on ("click", function() {
+        operator = $("#button-plus").text();
+        var printOperator= $("#operator");
+        printOperator.text(operator);
     })
 
-    $("#button-0").on ("click", function() {
-        firstNumber = firstNumber + $("#button-0").text();
-        var printResult = $("#first-number");
-        printResult.text(firstNumber);
+    $("#button-plus").on ("click", function() {
+        operator = $("#button-plus").text();
+        var printOperator= $("#operator");
+        printOperator.text(operator);
     })
 
-    $("#button-0").on ("click", function() {
-        firstNumber = firstNumber + $("#button-0").text();
-        var printResult = $("#first-number");
-        printResult.text(firstNumber);
+    $("#button-plus").on ("click", function() {
+        operator = $("#button-plus").text();
+        var printOperator= $("#operator");
+        printOperator.text(operator);
     })
 
-    $("#button-0").on ("click", function() {
-        firstNumber = firstNumber + $("#button-0").text();
-        var printResult = $("#first-number");
-        printResult.text(firstNumber);
+    $("#button-plus").on ("click", function() {
+        operator = $("#button-plus").text();
+        var printOperator= $("#operator");
+        printOperator.text(operator);
     })
 
 
